--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,4 @@ jobs:
           java-version: 1.8
 
       - name: Build Spring Boot Application
-        run: ./mvnw clean package
-
-      - name: Run Spring Boot Application
-        run: java -jar target/patient-portal-service-0.0.1-SNAPSHOT.jar
+        run: ./mvnw clean install
