--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Grant execute permission to mvnw
+        run: chmod +x ./mvnw
+
       - name: Build Spring Boot Application
         run: ./mvnw clean install
